added activities and steps

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,5 +9,9 @@ block content
   - }
   p.lead
     a(href="/authorizeFitbit", role="button") Add a new Fitbit
-    br
+    <br>
     a(href="/profile?id=622KYV", role="button") Get user profile
+    <br>
+    a(href="/steps?id=622KYV", role="button") Get user steps
+    <br>
+    a(href="/activities?id=622KYV", role="button") Get user activities
